# Chessbot5

./: .gitignore  Cargo.toml  LICENSE  README.md  openings.txt
benches/: benchmarking.rs
src/: board.rs  lib.rs  main.rs  movement.rs  piece.rs
src/ai/: alphabeta.rs  alphakiller.rs  bottesting.rs  iddfs.rs  interface.rs  memoalpha.rs  memomax.rs  minimax.rs  mod.rs  omikron.rs  pvs.rs  quiescence.rs
src/ai/structures/: database.rs  killerray.rs  memomap.rs  mod.rs  updatemap.rs
src/backend/: board.rs  bot_testing.rs  gameboard.rs  keycount.rs  mod.rs  movement.rs  piece.rs  zobrist.rs
src/backend/ai/: alphabeta.rs  alphakiller.rs  iddfs.rs  interface.rs  memoalpha.rs  memomax.rs  minimax.rs  mod.rs  negaalpha.rs  negaalphakiller.rs  negadb.rs  negaiddfs.rs  negamax.rs  negamemoalpha.rs  negamemomax.rs  negapvs.rs  negaquiscence.rs  omikron.rs  pvs.rs  quiescence.rs  splitter.rs
src/backend/ai/structures/: database.rs  killerray.rs  memomap.rs  mod.rs
src/backend/board_representation/: board.rs  mod.rs  movement.rs  piece.rs  repetition_counter.rs  zobrist.rs
src/backend/network/: Connection.rs  mod.rs
