[package]
name = "chessbot5"
version = "0.1.0"
authors = ["SteinarSi <steinar.simonnes@gmail.com>", "Sander Wiig <https://github.com/Swi005>"]
edition = "2018"

[dependencies]
rand = "0.8.3"
rand_pcg = "0.3.1"
criterion = "0.3.4"
druid = "0.7.0"

[[bench]]
name = "benchmarking"
harness = false